--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="layout.js" defer></script>
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder
-        position="1 0.75 -3"
-        radius="0.5"
-        height="1.5"
-        color="#FFC65D"
-      ></a-cylinder>
+      <!--   add cursor     -->
+      <a-camera camera-listener>
+        <a-entity
+          cursor="fuse: true; fuseTimeout: 500"
+          position="0 0 -1"
+          geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.02"
+          material="color: black; shader: flat"
+        >
+        </a-entity>
+      </a-camera>
+
+      <!--    bird eye view    -->
+      <!--       <a-camera position="0 20 0"></a-camera> -->
+      
+      <!--   ground & sky    -->
       <a-plane
-        position="0 0 -4"
+        position="0 0 0"
         rotation="-90 0 0"
-        width="4"
-        height="4"
+        width="100"
+        height="100"
         color="#7BC8A4"
       ></a-plane>
       <a-sky color="#ECECEC"></a-sky>
