🍁🌛 Checkpoint ./layout.js:44877082/334 ./index.html:44877082/18

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <a-scene>
       <!--   add cursor     -->
-      <a-camera camera-listener>
+<!--       <a-camera camera-listener>
         <a-entity
           cursor="fuse: true; fuseTimeout: 500"
           position="0 0 -1"
@@ -14,10 +14,10 @@
           material="color: black; shader: flat"
         >
         </a-entity>
-      </a-camera>
+      </a-camera> -->
 
       <!--    bird eye view    -->
-<!--             <a-camera position="0 20 0"></a-camera> -->
+            <a-camera position="0 20 0"></a-camera>
 
       <!--   ground & sky    -->
       <a-plane
