👄🏡 Checkpoint ./layout.js:44877082/1149 ./index.html:44877082/28

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <a-scene>
+      <a-assets></a-assets>
       <!--   add cursor     -->
 <!--       <a-camera camera-listener>
         <a-entity
