--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a-scene>
       <a-assets></a-assets>
       <!--   add cursor     -->
-<!--       <a-camera camera-listener>
+      <a-camera camera-listener>
         <a-entity
           cursor="fuse: true; fuseTimeout: 500"
           position="0 0 -1"
@@ -15,10 +15,10 @@
           material="color: black; shader: flat"
         >
         </a-entity>
-      </a-camera> -->
+      </a-camera>
 
       <!--    bird eye view    -->
-            <a-camera position="0 20 0"></a-camera>
+<!--             <a-camera position="0 20 0"></a-camera> -->
 
       <!--   ground & sky    -->
       <a-plane
