--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
   </head>
   <body>
     <a-scene>
-      <a-assets></a-assets>
+      <a-assets
+        ><audio
+          id="Title.mp3"
+          preload="auto"
+          src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Title.mp3?v=1725365707215"
+        ></audio
+      >
+        <audio
+          id="Introduction.mp3"
+          preload="auto"
+          src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Introduction.mp3?v=1725365680828"
+        ></audio
+      ></a-assets>
       <!--   add cursor     -->
       <a-camera camera-listener>
         <a-entity
@@ -18,7 +30,7 @@
       </a-camera>
 
       <!--    bird eye view    -->
-<!--             <a-camera position="0 20 0"></a-camera> -->
+      <!--             <a-camera position="0 20 0"></a-camera> -->
 
       <!--   ground & sky    -->
       <a-plane
