⛱⏳ Checkpoint ./layout.js:44877082/126 ./index.html:44877082/841

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     <a-scene>
       <a-assets
-        ><audio
+        >
+<!--         <audio
           id="Title.mp3"
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Title.mp3?v=1725365707215"
@@ -17,7 +18,8 @@
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Introduction.mp3?v=1725365680828"
         ></audio
-      ></a-assets>
+      > -->
+      </a-assets>
       <!--   add cursor     -->
       <a-camera camera-listener>
         <a-entity
