--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a-scene>
       <a-assets
         >
-<!--         <audio
+        <audio
           id="Title.mp3"
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Title.mp3?v=1725365707215"
@@ -18,7 +18,7 @@
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Introduction.mp3?v=1725365680828"
         ></audio
-      > -->
+      >
       </a-assets>
       <!--   add cursor     -->
       <a-camera camera-listener>
