⚾️📯 Checkpoint ./index.html:44877082/1284 ./layout.js:44877082/364

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 
       <!--    bird eye view    -->
       <!--             <a-camera position="0 20 0"></a-camera> -->
+      
+      <a-sphere
+        id="audio3"
+        position="0 1 -5"
+        radius="0.5"
+        color="#EF2D5E"
+        shader="flat"
+        sound="src:#Introduction.mp3; autoplay:true"
+      ></a-sphere>
 
       <!--   ground & sky    -->
       <a-plane
