💅🌚 Checkpoint ./index.html:44877082/18 ./layout.js:44877082/20005

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a-scene>
       <a-assets
         >
-        <audio
+<!--         <audio
           id="Title.mp3"
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Title.mp3?v=1725365707215"
@@ -18,7 +18,7 @@
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Introduction.mp3?v=1725365680828"
         ></audio
-      >
+      > -->
       </a-assets>
       <!--   add cursor     -->
       <a-camera camera-listener>
@@ -34,14 +34,14 @@
       <!--    bird eye view    -->
       <!--             <a-camera position="0 20 0"></a-camera> -->
       
-      <a-sphere
+<!--       <a-sphere
         id="audio3"
         position="0 1 -5"
         radius="0.5"
         color="#EF2D5E"
         shader="flat"
         sound="src:#Introduction.mp3; autoplay:true"
-      ></a-sphere>
+      ></a-sphere> -->
 
       <!--   ground & sky    -->
       <a-plane
