🎆🌹 Checkpoint ./layout.js:44877082/42 ./index.html:44877082/2631

--- a/index.html
+++ b/index.html
@@ -5,21 +5,7 @@
   </head>
   <body>
     <a-scene>
-      <a-assets
-        >
-<!--         <audio
-          id="Title.mp3"
-          preload="auto"
-          src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Title.mp3?v=1725365707215"
-        ></audio
-      >
-        <audio
-          id="Introduction.mp3"
-          preload="auto"
-          src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/Introduction.mp3?v=1725365680828"
-        ></audio
-      > -->
-      </a-assets>
+      <a-assets></a-assets>
       <!--   add cursor     -->
       <a-camera camera-listener>
         <a-entity
@@ -33,8 +19,8 @@
 
       <!--    bird eye view    -->
       <!--             <a-camera position="0 20 0"></a-camera> -->
-      
-<!--       <a-sphere
+
+      <!--       <a-sphere
         id="audio3"
         position="0 1 -5"
         radius="0.5"
