--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <!--   ground & sky    -->
       <a-plane
+        id="floor"
         position="0 0 0"
         rotation="-90 0 0"
         width="100"
