--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   </head>
   <body>
     <a-scene>
-      <a-assets></a-assets>
+      <a-assets>
+      <audio
+          id="bound-cue"
+          preload="auto"
+          src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/bouncy%20ball%20boundry%202.wav?v=1725615444014"
+        ></audio>
+      </a-assets>
       <!--   add cursor     -->
-      <a-camera camera-listener>
+      <a-camera camera-listener hit-bounds>
         <a-entity
           cursor="fuse: true; fuseTimeout: 500"
           position="0 0 -1"
