--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         ></audio>
       </a-assets>
       <!--   add cursor     -->
-      <a-camera hit-bounds collide>
+      <a-camera hit-bounds>
         <a-entity
           id="camera"
           cursor="fuse: true; fuseTimeout: 500"
