--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
           preload="auto"
           src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/bouncy%20ball%20boundry%202.mp3?v=1726060877985"
         ></audio>
+                <audio
+          id="bound-cue"
+          preload="auto"
+          src="https://cdn.glitch.global/53d6d00c-ae48-4ff9-bb80-4a61d4cfaa29/bouncy%20ball%20boundry%202.mp3?v=1726060877985"
+        ></audio>
       </a-assets>
       <!--   add cursor     -->
       <a-camera hit-bounds>
