💁🔖 Checkpoint ./layout.js:44877082/53948 ./index.html:44877082/18

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         ></audio>
       </a-assets>
       <!--   add cursor     -->
-<!--       <a-camera hit-bounds>
+      <a-camera hit-bounds>
         <a-entity
           id="camera"
           cursor="fuse: true; fuseTimeout: 500"
@@ -22,10 +22,10 @@
           material="color: black; shader: flat"
         >
         </a-entity>
-      </a-camera> -->
+      </a-camera>
 
       <!--    bird eye view    -->
-                        <a-camera position="0 20 0"></a-camera>
+<!--                         <a-camera position="0 20 0"></a-camera> -->
 
       <!--   ground & sky    -->
       <a-plane
