🍘📺 Checkpoint ./layout.js:44877082/24097 ./index.html:44877082/11

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         ></audio>
       </a-assets>
       <!--   add cursor     -->
-      <a-camera hit-bounds>
+      <a-camera>
         <a-entity
           id="camera"
           cursor="fuse: true; fuseTimeout: 500"
